# n8n-Workflows

./: .#README.md  .env.example  .env.production  .env.production.template  .env.production_complete  .gitignore  .importlinter  .ki-prognosen-final-lock  .pre-commit-config.yaml  ACTIVATION_CLEANUP_REPORT_2025_08_17.md  AKTUALISIERTE_OFFENE_PUNKTE_2025_08_13.md  AKTUALISIERTE_OFFENE_PUNKTE_2025_08_15.md  ANALYSIS_PROGNOSEN_BUG.md  API_DOCUMENTATION_COMPLETION_REPORT_v1_0_0_20250825.md  ARCHITECTURE_REFACTORING_REPORT_v6_0_0_20250824.md  AUTOMATED_MIGRATION_PIPELINE_v1_0_0.md  BACKEND_REFACTORING_REPORT.md  BITPANDA_DEPOT_INTEGRATION_REQUIREMENTS.md  BRANCH_MANAGEMENT_SETUP.md  BUG_REPORT_FRONTEND_NAVIGATION.md  CI_CD_INTEGRATION_PLAN_TIMEFRAME_AGGREGATION_v7.1.md  CI_CD_PIPELINE_REPORT_ISSUE_57.md  CLEANUP_REPORT_v1_0_0_20250827.md  CLEAN_ARCHITECTURE_FINAL_REPORT_v1_0_0_20250825.md  CODE_ANALYSE_PROJEKTVORGABEN_COMPLIANCE.md  CODE_ANALYSIS_PRODUCTION_10.1.1.174.md  CODE_ANALYSIS_REPORT.md  CODE_CLEANUP_REPORT_ISSUE_65.md  CODE_CLEANUP_REPORT_Issue_21_20250824.md  CODE_DUPLICATION_REDUCTION_REPORT_ISSUE_61.md  CODE_IMPLEMENTATION_ANALYSIS.md  CODE_QUALITY_ANALYSIS_REPORT_20250829.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY_v1_0_0_20250825.md  CODE_REVIEW_CHECKLIST_TIMEFRAME_AGGREGATION_v7.1.md  CODE_REVIEW_REPORT_ISSUE_57.md  CODE_STRUCTURE_ANALYSIS_2025_08_04.md  COMPLETE_FEATURE_WORKFLOW_STATUS_REPORT_TIMEFRAME_AGGREGATION_v7.1.md  COMPREHENSIVE_BUG_RESOLUTION_REPORT_FRONTEND_NAV_001.md  CRITICAL_CLEANUP_EXECUTION_REPORT_v1_0_0_20250827_044120.json  CRITICAL_CODE_ANALYSIS_REPORT_v1_0_0_20250827.md  (+244 more)
.claude/: MEMORY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README-workflows.md  labels.yml  pull_request_template.md
.local_configs/: systemd-companies-marketcap-service
Discord-Egon/: twitch_stt_v2.py  twitch_watchdog.py
Egon2/: .env.example  .gitignore  pyproject.toml
Egon2/.claude/: MEMORY.md
Egon2/.claude/memory/: project_egon2.md
Egon2/deploy/: deploy.sh
Egon2/docs/: HLD-Egon2.md  LLD-Agenten.md  LLD-Architektur.md  LLD-Core.md  LLD-Interfaces.md  LLD-Persistenz.md  LLD-Tests.md  Spec-UX.md
Egon2/docs/audit/: Agenten-UX-Review.md  Architektur-Review.md  FastAPI-Review.md  Persistenz-Review.md  Security-Audit.md
Egon2/egon2/: database.py  dependencies.py  exceptions.py  llm_client.py  main.py  personality.py  settings.py  state.py
Egon2/egon2/agents/: registry.py
Egon2/egon2/core/: agent_dispatcher.py  context_manager.py  message_queue.py  scheduler.py  task_manager.py
Egon2/egon2/executors/: result.py  shell_executor.py  ssh_allowlist.py  ssh_executor.py
Egon2/egon2/interfaces/: matrix_bot.py  telegram_bot.py
Egon2/egon2/jobs/: bookstack_sync.py  mikrotik_update.py  news_report.py
Egon2/egon2/knowledge/: client.py
Egon2/egon2/sync/: bookstack.py
Ergänzung_Vorhersage/: Externe_Datenquellen.md  Feinkonzept_Modelle.md  LLD_1_Technisches_Modell.md  LLD_2_Sentiment_Modell.md  LLD_3_Fundamental_Makro_Modell.md  LLD_4_Meta_Modell.md  LLD_Data_1_Technisches_Modell.md  LLD_Data_2_Sentiment_Modell.md  LLD_Data_3_Fundamental_Makro_Modell.md  LLD_Data_4_Meta_Modell.md  LLD_Datenbank.md  LLD_Evaluation_Testing.md  LLD_Modell_Training_Inferenz.md  LLD_PoC_Implementierungsplan.md  LLD_Projekt_Setup_Technologie.md  Technisches_Konzept_KI_Aktienprognose.md
Ernährung/: HLD-Ernaehrungs-App.md  README.md
Ernährung/backend/: .env.example  pyproject.toml
Ernährung/backend/api/: __init__.py
Ernährung/backend/api/v1/: __init__.py
Ernährung/backend/api/v1/endpoints/: health.py  recipes.py  users.py
Ernährung/backend/app/: main.py
Ernährung/backend/core/: config.py
Ernährung/backend/database/: __init__.py  connection.py  init_data.py  models.py
Ernährung/backend/models/: database.py  schemas.py
Ernährung/backend/routers/: __init__.py  analytics.py  health.py  inventory.py  receipts.py  recipes.py  shopping.py  users.py
Ernährung/backend/schemas/: __init__.py  health.py  inventory.py  meal.py  product.py  receipt.py  recipe.py  shopping.py  user.py
Ernährung/backend/services/: __init__.py  health_service.py  inventory_service.py  ml_service.py  ocr_service.py  recipe_service.py  shopping_service.py  user_service.py
Mailserver/: ADMINISTRATION.md  ALIASES.md  (+12 more)
(+992 files in other folders)
